[package]
name = "stylua-wasm"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "WebAssembly wrapper for  JohnnyMorganz's StyLua"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
stylua = "0.11.2"

